phase 1: config & security - ddl-auto validate, CORS from config, Swagger permitAll, .env, cleanup